--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "amqplib": "^0.10.9",
+    "axios": "^1.13.2",
+    "bullmq": "^5.66.4",
     "dotenv": "^17.2.3",
+    "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.3",
+    "pg-promise": "^12.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
